fixed z-index problem, now it's actually done.

--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,11 @@ img {
 }
 
 .slick-dots {
-  position: absolute;
-  top: 17%;
-  right: 25%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  z-index: 2;
+  z-index: 20;
 }
 
 .slick-dots li:not(:last-of-type) {
@@ -128,6 +125,11 @@ img {
   color: #fff;
   border-radius: 6%;
   border: 1px solid #fff;
+  z-index: 1;
+}
+
+.header__content__title {
+  z-index: 1;
 }
 
 .header__content__title-link {
@@ -151,9 +153,18 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   color: #fff;
+  z-index: 20;
+}
+
+.main__list__pagination {
+  position: absolute;
+  top: 17%;
+  right: 25%;
+  z-index: 1;
 }
 
 .main__list__item {
+  z-index: 30;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,9 +267,9 @@ img {
 
 .main-slider {
   position: relative;
+  z-index: 1;
   -webkit-transition: .4s;
   transition: .4s;
-  z-index: -2;
 }
 
 .main-slider__bg-icon {
@@ -307,13 +318,13 @@ img {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .main__list__item:first-of-type {
-    display: none;
-  }
-  .slick-dots {
+  .main__list__pagination {
     right: 50%;
     -webkit-transform: translateX(50%);
             transform: translateX(50%);
+  }
+  .main__list__item:first-of-type {
+    display: none;
   }
 }
 /*# sourceMappingURL=style.css.map */
