--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -29,9 +29,9 @@
   .main
     &__list
       justify-content: center
+      &__pagination
+        right: 50%
+        transform: translateX(50%)
       &__item
         &:first-of-type
           display: none
-  .slick-dots
-    right: 50%
-    transform: translateX(50%)
