--- a/sass/_slider.sass
+++ b/sass/_slider.sass
@@ -10,12 +10,10 @@
     background-image: linear-gradient(135deg, rgb(75,219,109), rgb(55,192,88))
 
 .slick-dots
-  position: absolute
-  top: 17%
-  right: 25%
+
   display: flex
   list-style: none
-  z-index: 2
+  z-index: 20
   li
     &:not(:last-of-type)
       margin-right: 16px
