--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -13,7 +13,9 @@
       color: #fff
       border-radius: 6%
       border: 1px solid #fff
+      z-index: 1
     &__title
+      z-index: 1
       &-link
         font-size: 26px
         line-height: 24px
