--- a/sass/templates/_main-slider.sass
+++ b/sass/templates/_main-slider.sass
@@ -1,8 +1,8 @@
 .main
   &-slider
     position: relative
+    z-index: 1
     transition: .4s
-    z-index: -2
     &__bg-icon
       position: absolute
       right: 0
